# ionforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
examples/: build_geometry.py  export_schema.py  json_round_trip.py  stl_round_trip.py  visualize_geometry.py  viz_matplotlib.py  viz_plotly.py  viz_pyvista.py
scripts/: generate_readme_images.py  pre-push
src/ionforge/: __init__.py
src/ionforge/_types/: _base_model.py  _generated.py
src/ionforge/client/: __init__.py  _config.py  _exceptions.py  _generated.py  _pagination.py  _polling.py  _transport.py
src/ionforge/client/_models/: __init__.py  pagination.py
src/ionforge/client/_resources/: __init__.py  _base.py  geometries.py  jobs.py  projects.py  results.py  simulations.py  sweeps.py  uploads.py
src/ionforge/geometry/: __init__.py  builder.py  export_schema.py  models.py  primitives.py  stl_import.py
src/ionforge/geometry/visualization/: __init__.py  _common.py  _matplotlib.py  _plotly.py  _pyvista.py
tests/: test_geometry_models.py  test_primitives.py  test_visualization.py
