[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ionforge"
version = "0.1.0"
description = "Open-source charged particle optics toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jacob Cable" }]
keywords = [
    "charged particle optics",
    "BEM",
    "ion optics",
    "XPS",
    "electron analyser",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
stl = ["numpy>=1.23"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "pyright>=1.1",
]

[project.urls]
Repository = "https://github.com/ionforge-labs/ionforge"
Issues = "https://github.com/ionforge-labs/ionforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ionforge"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-v"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.coverage.run]
source = ["src/ionforge"]
