[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ionforge"
version = "0.1.0"
description = "Open-source charged particle optics toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael Giles" },
    { name = "Puneet Matharu" },
    { name = "Jacob Cable" },
]
keywords = [
    "charged particle optics",
    "BEM",
    "ion optics",
    "XPS",
    "electron analyser",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "ty>=0.0",
    "matplotlib>=3.5",
]
viz-plotly = ["plotly>=5.0"]
viz-pyvista = ["pyvista>=0.42"]
viz = ["matplotlib>=3.5", "plotly>=5.0", "pyvista>=0.42"]

[project.urls]
Repository = "https://github.com/ionforge-labs/ionforge"
Issues = "https://github.com/ionforge-labs/ionforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ionforge"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-v"]

[tool.ty.environment]
root = ["src"]

[tool.coverage.run]
source = ["src/ionforge"]
